module 2 assignment completed

--- a/module-2/module2.html
+++ b/module-2/module2.html
@@ -2,83 +2,33 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module-2 Assignment</title>
 	<link rel="stylesheet" type="text/css" href="module2.css">
-	<style>
-
-	@font-face {
-    font-family: "My Font";
-    src: url("comic.ttf") format("truetype");
-	}
-
-	* {
-		box-sizing: border-box;
-		overflow: hidden;
-		margin: 0;
-		padding: 0;
-	}
-	.container{
-		position: relative;
-		/*margin: 10px;*/
-	}
-	.container-fluid{
-		position: relative;
-		float: left;
-		padding: 15px;
-		
-		/*margin: 10px;*/
-	}
-
-	h1{
-		text-align: center;
-		font-family: "My Font", cursive, sans-serif;
-		resize: 75%;
-		width: auto;
-		margin-bottom: 20px;
-		margin-top: 20px;
-	}
-
-	p {
-		font-family: "My Font", cursive, sans-serif;
-		resize: 25%;
-		border: 1px solid black;
-		background: #Eb8b8b;
-		padding: 10px;
-		
-	}
-
-	span{
-		font-family: "My Font", cursive, sans-serif;
-		position: relative;
-		
-		text-align: center;
-
-		border: 1px solid black;
-		resize: 75%;
-	}
-
-	body{
-		padding: 15px;
-	}		
-	</style>
+	
 	
 </head>
 <body>
-	<h1>About India</h1>
-	<div class="container">
-		<section class="container-fluid col-lg-3 col-md-2 col-sm-1">
-			<span>India</span>
+	<h1><font size="75%">About India</font></h1>
+	<div>
+		<section class="col-lg-3 col-md-2 col-sm-1">
+			<div class="me">
+			<h3 id="title1">India</h3>
 			<p>India is a mystical land of dreams in which about a seventh of our world’s population resides. It is also a country which has one the richest and most vivid history and heritage. The country’s economy is currently the tenth largest in the world and, as said by many, it has the huge potential to become a superpower of the world in the coming years. It is the seventh largest country in the world in terms of area and the largest democracy in the world.</p>
+			</div>
 		</section>
 
-		<section class="container-fluid col-lg-3 col-md-2 col-sm-1">
-			<span>Culture</span>
-			<p>India is probably the most culturally diverse country in the world. From North to South and East to West, there are thousands of different cultures followed in the country. India’s languages, religions, dance, music, architecture, and customs differ from place to place in the country. This is not very well known, but four of the major religions of the world- Hinduism, Sikhism, Buddhism and Jainism originated in India and almost all the different religions are followed by the people in India. </p>
+		<section class="col-lg-3 col-md-2 col-sm-1">
+			<div class="me">
+			<h3 id="title2">Culture</h3>
+			<p>India is probably the most culturally diverse country in the world. From North to South and East to West, there are thousands of different cultures followed in the country. India’s languages, religions, dance, music, architecture, and customs differ from place to place in the country. This is not very well known, but four of the major religions of the world- Hinduism, Sikhism, Buddhism and Jainism originated in India and almost all the different religions are followed by the people in India.</p> </div>
 		</section>
 
-		<section class="container-fluid col-sm-1 col-md-1 col-lg-3">
-			<span>Festivals</span>
+		<section class="col-sm-1 col-md-1 col-lg-3">
+			<div class="me">
+			<h3 id="title3">Festivals</h3>
 			<p>India celebrates more festivals than probably any other nation in the world. Being a secular nation, India celebrates the festivals of all religions and that too with a lot of enthusiasm. Some of the more popular festivals include Holi, Diwali, Rakshbandhan, Dussehra, Durga Puja, Christmas, Gurupurab, Eid-ul-Fitr and Eid-ul-Zuha. Indians are really serious when it comes to preparations for a festival and that can be seen in the way they celebrate: with open hearts and wide smiles. People travel from various nations across the globe to join in and experience the celebration of the different Indian festivals.</p>
+			</div>
 		</section>
 
 	</div>
