--- a/module-3/module-3.html
+++ b/module-3/module-3.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 <nav id= "header-nav" class="navbar navbar-default">
-	<div class="container">
+	<div class="container-fluid">
 	<div class="navbar-header">
 		<div id="brand" class="navbar-brand">
 			<a href="module-3.html"><h1>Food, LLC</h1></a>
@@ -41,15 +41,15 @@
 	<h2 id="menu" class="text-center">Our Menu</h2>
 <!-- </div> -->
 <div id="main">
-<div class="col-lg-4 col-md-6 col-sm-12">
-<section>
+<div class="col-md-4 col-sm-6 col-xs-12">
+<section >
 	<h3 class="text-center" id="india">India</h3>
 	<p>India, officially the Republic of India, is a country in South Asia. It is the seventh-largest country by area, the second-most populous country (with over 1.2 billion people), and the most populous democracy in the world. Bounded by the Indian Ocean on the south, the Arabian Sea on the south-west, and the Bay of Bengal on the south-east, it shares land borders with Pakistan to the west; China, Nepal, and Bhutan to the north-east; and Myanmar (Burma) and Bangladesh to the east. In the Indian Ocean, India is in the vicinity of Sri Lanka and the Maldives; in addition, India's Andaman and Nicobar Islands share a maritime border with Thailand and Indonesia. India's capital is New Delhi; other metropolises include Mumbai, Bangalore, Chennai, Hyderabad, Ahmedabad and Kolkata.<br><br>
 	Home to the ancient Indus Valley Civilisation and a region of historic trade routes and vast empires, the Indian subcontinent was identified with its commercial and cultural wealth for much of its long history. Four religions—Hinduism, Buddhism, Jainism, and Sikhism—originated here, whereas Zoroastrianism, Judaism, Christianity, and Islam arrived in the 1st millennium CE and also shaped the region's diverse culture. Gradually annexed by and brought under the administration of the British East India Company from the early 18th century and administered directly by the United Kingdom after the Indian Rebellion of 1857, India became an independent nation in 1947 after a struggle for independence that was marked by non-violent resistance led by Mahatma Gandhi.<br><br>
 	In 2015, the Indian economy was the world's seventh-largest by nominal GDP and third-largest by purchasing power parity (PPP). Following market-based economic reforms in 1991, India became one of the fastest-growing major economies; it is considered a newly industrialised country. However, it continues to face the challenges of poverty, corruption, malnutrition and inadequate public healthcare. A nuclear weapons state and a regional power, it has the third-largest standing army in the world and ranks sixth in military expenditure among nations. India is a federal republic governed under a parliamentary system and consists of 29 states and 7 union territories. India is a pluralistic, multilingual, and a multi-ethnic society. It is also home to a diversity of wildlife in a variety of protected habitats.</p>
 </section>
 </div>
-<div class="col-lg-4 col-md-6 col-sm-12">
+<div class="col-md-4 col-sm-6 col-xs-12">
 <section>
 	<h3 class="text-center" id="doi">Demographics of India</h3>
 	<p>With 1,210,193,422 residents reported in the 2011 provisional census report,[266] India is the world's second-most populous country. Its population grew by 17.64% during 2001–2011, compared to 21.54% growth in the previous decade (1991–2001). The human sex ratio, according to the 2011 census, is 940 females per 1,000 males. The median age was 24.9 in the 2001 census. The first post-colonial census, conducted in 1951, counted 361.1 million people. Medical advances made in the last 50 years as well as increased agricultural productivity brought about by the "Green Revolution" have caused India's population to grow rapidly. India continues to face several public health-related challenges.<br><br>
@@ -57,8 +57,8 @@
 	The 2011 census reported that Hinduism (79.8% of the population) is the largest religion in India, followed by Islam (14.23%). Other religions or none (5.97% of the population) include Christianity (2.30%), Sikhism (1.72%), Buddhism (0.70%), Jainism, Judaism, Zoroastrianism, and the Bahá'í Faith.</p>
 </section>
 </div>
-<div class="col-lg-4 col-md-12 col-sm-12">
-<section>
+<div class="col-md-4 col-sm-12 col-xs-12">
+<section >
 	<h3 class="text-center" id="coi">Culture of India</h3>
 	<p>Indian cultural history spans more than 4,500 years. During the Vedic period (c. 1700 – 500 BCE), the foundations of Hindu philosophy, mythology, theology and literature were laid, and many beliefs and practices which still exist today, such as dhárma, kárma, yóga, and mokṣa, were established. India is notable for its religious diversity, with Hinduism, Buddhism, Sikhism, Islam, Christianity, and Jainism among the nation's major religions. The predominant religion, Hinduism, has been shaped by various historical schools of thought, including those of the Upanishads, the Yoga Sutras, the Bhakti movement, and by Buddhist philosophy.<br><br>
 	Much of Indian architecture, including the Taj Mahal, other works of Mughal architecture, and South Indian architecture, blends ancient local traditions with imported styles. Vernacular architecture is also highly regional in it flavours. Vastu shastra, literally "science of construction" or "architecture" and ascribed to Mamuni Mayan, explores how the laws of nature affect human dwellings; it employs precise geometry and directional alignments to reflect perceived cosmic constructs. As applied in Hindu temple architecture, it is influenced by the Shilpa Shastras, a series of foundational texts whose basic mythological form is the Vastu-Purusha mandala, a square that embodied the "absolute".[296] The Taj Mahal, built in Agra between 1631 and 1648 by orders of Emperor Shah Jahan in memory of his wife, has been described in the UNESCO World Heritage List as "the jewel of Muslim art in India and one of the universally admired masterpieces of the world's heritage".[297] Indo-Saracenic Revival architecture, developed by the British in the late 19th century, drew on Indo-Islamic architecture.</p>
