--- a/module-3/module-3.html
+++ b/module-3/module-3.html
@@ -15,7 +15,7 @@
 	<div class="container-fluid">
 	<div class="navbar-header">
 		<div id="brand" class="navbar-brand">
-			<a href="module-3.html"><h1>Food, LLC</h1></a>
+			<a href="module-3.html"><h1>Indian Menu</h1></a>
 		</div>
 
       <button id="btn" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
